# ndarray_threaded_window

./: .gitignore  Cargo.toml  Makefile  README.md  base_functions.pyi  ndarray_threaded_window.pyi  pyproject.toml
.github/workflows/: release.yml
.run/: BENCH without pyo3.run.xml  TEST  with pyo3.run.xml  TEST  without pyo3.run.xml  build without pyo3.run.xml  maturin BUILD.run.xml  maturin develop .run.xml
benches/: bench.rs
examples/: main.py  speed_tests.py
python/: main.py
python/ndarray_threaded_window/: __init__.py  base_functions.pyi  ndarray_threaded_window.pyi
src/: array_shape_traits.rs  array_threading.rs  integer_conversion_traits.rs  lib.rs  threading.rs  window_functions.rs
src/window_functions/: fast_unsigned_integer.rs  mod.rs
